Changed Map type for params to preserve insertion order